deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monitor
  namespace: default
  labels:
    app: monitor
spec:
  type: ClusterIP
  selector:
    app: monitor
  ports:
    - name: http
      port: 8080
      targetPort: http
